# playgroundino

./: .gitmodules  Build  configure  flash  meson.build
blinky/: blinky.cc  knight.cc  pwmfade.cc  rgbfade.cc
cross/: avr.conf
eeprom/: clear.cc
i2c/: rtc.cc  scan.cc
s7777/: clock.cc  s7777.h  test.cc
